dictionary API added and all functions added

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <section class="data container">
         <span class="loading">Loading.....</span>
-        <p class="def">This is our word meaning</p>
+        <p class="def"></p>
         <div class="audio">
-
+            <audio src="" id="audio"></audio>
         </div>
         <div class="not_found"></div>
     </section>
