some design changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
     </nav>
 
-    <section class="input container">
+    <section class="input ">
         <h2>Find any word that exists in the world :)</h2>
         <div class="form_wrap">
             <div class="input_wrap">
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <section class="data container">
+    <section class="data ">
         <span class="loading">Loading.....</span>
         <p class="def"></p>
         <div class="audio">
